--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
     "mocha": "^2.4.5"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register"
   },
   "author": "Jonathan Lin",
   "license": "MIT"
